# zkzkrollup

./: .gitignore  Cargo.toml  README.md  draft.py  zkrollup.py  zkzkrollup.py
.github/workflows/: verifier.yml
confidential-transfer/: Cargo.toml
confidential-transfer/src/: babyjub.rs  lib.rs
contracts/: README.md  package.json
contracts/contracts/: IRollup.sol
contracts/rawdata/: calldata.txt  deployment_code.txt
contracts/src/: main.rs
contracts/test/: Verifier.ts
docs/: ZK_ROLLUP.md
draft/: layer1.py  layer2.py  type.py  wallet.py  zk.py  zkrollup.py
hash/: Cargo.toml
hash/src/: lib.rs
localdb/: Cargo.toml  create_tables.sql  initdb.sh
localdb/src/: main.rs
merkle/: Cargo.toml  README.md
merkle-rnd/: Cargo.toml  merkle.py
merkle-rnd/src/: chip.rs  const.rs  lib.rs  merkle_tree.rs  tests.rs
merkle/src/: lib.rs  main.rs  merkle_tree.rs  partial_tree.rs  poseidon.rs
recursion/: Cargo.toml
recursion/src/: lib.rs  utils.rs  witness.rs
reddsa/: Cargo.toml  README.md
reddsa/src/: domain.rs  hash.rs  lib.rs  private.rs  public.rs  signature.rs
verifier/: Cargo.toml  deployment_code.txt
verifier-contract/: calldata.txt  deployment_code.txt  package-lock.json  package.json
verifier-contract/contracts/: IRollup.sol  Rollup.sol  Verifier.sol
verifier-contract/scripts/: deploy.ts
verifier-contract/test/: Verifier.ts
verifier-output/: Cargo.toml  calldata.txt
verifier-output/src/: main.rs
verifier/src/: main.rs
