[workspace]
members = [
    "confidential-transfer",
    "hash",
    "merkle",
    "merkle-rnd",
    "recursion",
    "verifier-output",
]
exclude = ["verifier-contract", "docs", "draft"]

# [patch."https://github.com/young-rocks/halo2.git"]
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19", package = "halo2_proofs" }
# halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19", package = "halo2_gadgets" }
