[package]
name = "confidential-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
itertools = "0.10.3"
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
ark-std = { version = "0.4.0", features = ["print-trace"] }
halo2-native-ec = { version = "0.1.0", git = "https://github.com/SoraSuegami/halo2-native-ec.git" }
