[package]
name = "merkle-rnd"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = "0.13"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }

lazy_static = "1.4.0"
rand_chacha = "0.3.0"
