[package]
name = "merkle-rnd"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
group = "0.12"
lazy_static = "1"

[dev-dependencies]
rand = "0.8"
