[package]
name = "sparse-merkle"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.2", default-features = false }
micromath = "2.0.0"
num-bigint = "0.4.3"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22", package = "halo2_proofs" }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22", package = "halo2_gadgets" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
group = "0.13.0"
smt = {git = "https://github.com/young-rocks/rocks-smt.git", rev = "c3b2b87cc0f622f40e707636f678d31e47ef8854" }
chiplet = {git = "https://github.com/young-rocks/rocks-smt.git", rev = "c3b2b87cc0f622f40e707636f678d31e47ef8854" }

# standard crate data is left out
[dev-dependencies]
rayon = "1.5.1"

[features]
default = ['std']
std = ["sha2/std"]
