[package]
name = "reddsa"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
rand_core = { version="0.6.4", default-features = false }
